# apollo

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  C4A_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PHASE2_CI_IMPLEMENTATION.md  README.md  STACK_VERSION  config.example.yaml  coverage.xml  docker-compose.test.apollo.yml  docker-compose.test.sophia-mock.yml  docker-compose.test.yml  pyproject.local.toml  pyproject.toml
.claude/: HANDOFF.md
.context/: EPISODES.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml  e2e.yml  phase2-apollo-web.yml  publish.yml
.serena/: project.yml
.serena/memories/: apollo-p0-fixes-2026-01-11.md
PHASE1_VERIFY/scripts/: README.md  m4_test.py
api-specs/: hermes-openapi.yaml  sophia-openapi.yaml
containers/: docker-compose.test.apollo.yml  docker-compose.test.yml
docs/: 2026-01-10-environment-debugging-session.md  API_CLIENTS.md  AUTHENTICATION.md  HCG_DATA_LAYER.md  HERMES_SETUP.md  PERSONA_DIARY.md  PERSONA_LLM_INTEGRATION.md  PROTOTYPE-WIRING.md  README.md  TESTING.md  WEBSOCKET_PROTOCOL.md  documentation-audit.md
docs/ci/: CI_PIPELINE.md  WORKFLOW_INVENTORY.md
docs/evidence/: README.md  VERIFICATION_MANIFEST.json
docs/evidence/apollo_surfaces_smoke/: README.md
docs/evidence/p2-m1/: apollo_api_health.json  hermes_health.json
docs/observability/: APOLLO_OTEL.md
docs/phase2/: PHASE2_ISSUES.md  PHASE2_SPEC.md  VERIFY.md
docs/plans/: 2026-01-02-standardization-design.md  2026-01-22-integration-validation-results.md  2026-01-22-integration-validation.md  apollo-task-queue.json
docs/scratch/: CODE_REVIEW.md  CODE_REVIEW_2.md  CODE_REVIEW_REACTION.md  HANDOFF.md  add_coverage_tests.py  check_coverage.py  final_fix.py  fix_tests.py  fix_tests_v2.py  git_commit.py  verify_utc.py
docs/scratch/issue-131-standardization/: intake.md  review.md  spec-review.md  verify.md
examples/: client_example.py  config_example.py
scripts/: README.md  check_env.py  dev.sh  gh_wrapper.py  lint.sh  run_apollo.sh  run_tests.sh  setup-local-dev.sh  start_demo.sh  test.sh  test_all.sh  test_stack.sh
scripts/lib/: common.sh
src/apollo/: __init__.py  env.py
src/apollo/api/: README.md  __init__.py  server.py
src/apollo/cli/: __init__.py  main.py
src/apollo/client/: __init__.py  hermes_client.py  persona_client.py  sophia_client.py
src/apollo/config/: __init__.py  settings.py
src/apollo/data/: __init__.py  hcg_client.py  models.py  persona_repository.py  persona_store.py  websocket_server.py
src/apollo/sdk/: __init__.py
tests/: conftest.old.py  conftest.py  test_apollo.py  test_apollo_integration.py  test_apollo_integration_legacy.py  test_backend_api.py  test_cli_sdk.py  test_client.py  test_config.py  test_diagnostics_integration.py  test_env.py  test_persona_api.py  test_persona_client.py  test_persona_store.py  test_websocket.py
tests/e2e/: .env.test  README.md  STACK_VERSION  conftest.py  docker-compose.e2e.yml  docker-compose.test.apollo.yml  docker-compose.test.yml  run_e2e.sh  seed_data.py  test_api_e2e.py  test_cli_e2e.py  test_e2e_flow.py  test_infrastructure.py
tests/e2e/mocks/sophia/: Dockerfile  sophia_mock.py
tests/e2e/stack/apollo/: STACK_VERSION  docker-compose.test.apollo.yml  docker-compose.test.yml
tests/integration/: __init__.py  conftest.py  test_diagnostics.py  test_hcg_integration.py  test_hermes_integration.py  test_otel_smoke.py  test_persona_integration.py
tests/unit/: conftest.py  test_backend_api.py  test_chat_stream.py  test_cli_sdk.py  test_client.py  test_config.py  test_env.py  test_hcg_client.py  test_p0_fixes.py  test_persona_store.py  test_sdk_error_classification.py
tests/unit/api/: test_otel_spans.py
tests/unit/cli/: test_otel_spans.py
webapp/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/e2e/: dashboard.spec.ts  phase2-verification.spec.ts
webapp/playwright-report/: index.html  results.json  results.xml
webapp/src/: App.css  App.tsx  index.css  index.ts  vite-env.d.ts
webapp/src/__tests__/: App.test.tsx  MediaUploadPanel.test.tsx  chat-llm.test.ts  config.test.ts  fixtures.test.ts  hermes-client.test.ts  setup.ts  sophia-client.test.ts
webapp/src/components/: ChatPanel.css  ChatPanel.tsx  DiagnosticsPanel.css  DiagnosticsPanel.tsx  GraphViewer.css  GraphViewer.tsx  HCGGraph.tsx  HistoryView.tsx  MediaLibraryPanel.css  MediaLibraryPanel.tsx  MediaUploadPanel.css  MediaUploadPanel.tsx  PersonaDiary.css  PersonaDiary.tsx  PersonaDiary_old.tsx  Sparkline.tsx  StatusView.tsx  TelemetryCard.css  TelemetryCard.tsx  index.ts
webapp/src/components/hcg-explorer/: DESIGN.md  HCGExplorer.css  HCGExplorer.tsx  context.tsx  index.ts  types.ts
webapp/src/components/hcg-explorer/clustering/: embedding-service.test.ts  embedding-service.ts
webapp/src/components/hcg-explorer/hooks/: useSemanticLayout.ts
webapp/src/components/hcg-explorer/renderers/: CytoscapeRenderer.tsx  ThreeRenderer.test.tsx  ThreeRenderer.tsx
webapp/src/components/hcg-explorer/utils/: graph-processor.test.ts  graph-processor.ts  layout-density.test.ts  layout-density.ts  mock-data.test.ts  mock-data.ts  snapshot-fingerprint.test.ts  snapshot-fingerprint.ts  types-filter.test.ts  viewer-improvements.test.ts
webapp/src/examples/: api-client-usage.tsx  cwm-fixture-example.tsx
webapp/src/fixtures/: README.md  cwm-fixtures.ts  cwm-types.ts  index.ts  mock-service.ts
webapp/src/hooks/: useDiagnostics.ts  useDiagnosticsStream.ts  useHCG.ts  useWebSocket.ts
webapp/src/hooks/__tests__/: useDiagnosticsStream.test.tsx
webapp/src/lib/: chat-llm.ts  config.ts  diagnostics-client.ts  hcg-client.ts  hermes-client.ts  index.ts  sophia-client.ts  websocket-client.ts  world-state.test.ts  world-state.ts
webapp/src/pages/: Dashboard.css  Dashboard.tsx  Explorer.tsx
webapp/src/types/: d3-force-3d.d.ts  diagnostics.ts  hcg.ts
