[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "UI and command layer for Project LOGOS"
authors = ["Project LOGOS Team"]
readme = "README.md"
packages = [{include = "apollo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
requests = "^2.28.0"
rich = "^13.0.0"
neo4j = "^5.0.0"
websockets = "^12.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
httpx = ">=0.27.0,<0.28.0"
logos-sophia-sdk = {git = "https://github.com/c-daly/logos.git", rev = "9549b089203ed1d8bb6560ab56ba02e7dbbefb61", subdirectory = "sdk/python/sophia"}
logos-hermes-sdk = {git = "https://github.com/c-daly/logos.git", rev = "9549b089203ed1d8bb6560ab56ba02e7dbbefb61", subdirectory = "sdk/python/hermes"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.0"
types-requests = "^2.28.0"

[tool.poetry.scripts]
apollo-cli = "apollo.cli.main:main"
apollo-api = "apollo.api.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["neo4j", "neo4j.*", "websockets", "websockets.*", "fastapi", "fastapi.*", "uvicorn", "uvicorn.*", "pydantic", "pydantic.*", "yaml", "yaml.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["logos_sophia_sdk", "logos_sophia_sdk.*", "logos_hermes_sdk", "logos_hermes_sdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=apollo --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests requiring real services (deselect with '-m \"not integration\"')",
]
