[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "UI and command layer for Project LOGOS"
authors = ["Project LOGOS Team"]
readme = "README.md"
packages = [{include = "apollo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
requests = "^2.28.0"
rich = "^13.0.0"
neo4j = "^5.0.0"
websockets = "^12.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.6"
httpx = ">=0.27.0,<0.28.0"
# Pinned to specific tag for stability
logos-sophia-sdk = {git = "https://github.com/c-daly/logos.git", tag = "v0.4.1", subdirectory = "sdk/python/sophia"}
logos-hermes-sdk = {git = "https://github.com/c-daly/logos.git", tag = "v0.4.1", subdirectory = "sdk/python/hermes"}
logos-foundry = {git = "https://github.com/c-daly/logos.git", tag = "v0.4.1"}
# OpenTelemetry (optional, see [tool.poetry.extras])
opentelemetry-api = {version = "^1.20.0", optional = true}
opentelemetry-sdk = {version = "^1.20.0", optional = true}
opentelemetry-instrumentation-fastapi = {version = "^0.41b0", optional = true}
opentelemetry-exporter-otlp = {version = "^1.20.0", optional = true}

[tool.poetry.extras]
# OpenTelemetry observability (optional, graceful fallback when absent)
otel = ["opentelemetry-api", "opentelemetry-sdk", "opentelemetry-instrumentation-fastapi", "opentelemetry-exporter-otlp"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.0"
types-requests = "^2.28.0"

[tool.poetry.scripts]
apollo-cli = "apollo.cli.main:main"
apollo-api = "apollo.api.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["neo4j", "neo4j.*", "websockets", "websockets.*", "fastapi", "fastapi.*", "uvicorn", "uvicorn.*", "pydantic", "pydantic.*", "yaml", "yaml.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["logos_sophia_sdk", "logos_sophia_sdk.*", "logos_hermes_sdk", "logos_hermes_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["logos_config", "logos_config.*", "logos_test_utils", "logos_test_utils.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=apollo --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real services (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests requiring running test stack",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_neo4j: marks tests that require Neo4j",
    "requires_milvus: marks tests that require Milvus",
    "requires_sophia: marks tests that require Sophia service",
]
